--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -1,27 +1,20 @@
 <!doctype html>
 <html lang="cs">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>GT7 Racing Championship 2025</title>
-  <link rel="stylesheet" href="GT7style.css">
+  <link rel="stylesheet" href="GT7style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
-    // Robust global showTab - works even without event
     window.showTab = function(tab, evt) {
-      document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-
-      if (evt && evt.target) {
-        evt.target.classList.add('active');
-      } else {
-        const btn = Array.from(document.querySelectorAll('.tab')).find(b => {
-          const oc = b.getAttribute('onclick') || '';
-          return oc.includes("'" + tab + "'") || oc.includes('"' + tab + '"') || oc.includes(tab);
-        });
+      document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));
+      if (evt && evt.target) evt.target.classList.add('active');
+      else {
+        const btn = Array.from(document.querySelectorAll('.tab')).find(b=>{ const oc = b.getAttribute('onclick')||''; return oc.includes("'" + tab + "'") || oc.includes('"' + tab + '"') || oc.includes(tab); });
         if (btn) btn.classList.add('active');
       }
-
-      document.querySelectorAll('[id$="-tab"]').forEach(el => el.classList.add('hidden'));
-
+      document.querySelectorAll('[id$="-tab"]').forEach(el=>el.classList.add('hidden'));
       const panel = document.getElementById(tab + '-tab');
       if (panel) panel.classList.remove('hidden');
     };
@@ -32,6 +25,11 @@
     <header>
       <h1>🏁 GT7 Racing Championship 2025</h1>
       <div class="small">Oficiální přehled závodů, výsledků a statistik</div>
+      <div class="auth-controls">
+        <button id="btn-signin" class="btn">Přihlásit se (admin)</button>
+        <button id="btn-signout" class="btn secondary hidden">Odhlásit se</button>
+        <span id="user-email" class="small"></span>
+      </div>
     </header>
 
     <div class="tabs">
@@ -43,33 +41,95 @@
 
     <div id="current-tab">
       <div class="section">
-        <h2>🏎️ Aktuální sezóna</h2>
-        <p>Test — aktuální sezóna zobrazuje obsah správně ✅</p>
+        <h2>Průběžné pořadí</h2>
+        <div class="leaderboard-controls">
+          <input id="search-driver" placeholder="🔍 Hledat jezdce">
+          <label>Min. starty: <input id="min-starts" type="number" min="0" value="0"></label>
+        </div>
+        <div id="leaderboard-container"></div>
+        <canvas id="points-chart" style="margin-top:20px; max-height:400px;"></canvas>
+      </div>
+
+      <div class="section">
+        <h2>Statistiky</h2>
+        <div id="stats-container"></div>
+      </div>
+
+      <div class="section">
+        <h2>Výsledky závodů</h2>
+        <div id="past-races"></div>
       </div>
     </div>
 
     <div id="archive-tab" class="hidden">
       <div class="section">
         <h2>Archiv sezón</h2>
-        <p>Test — archiv zobrazen správně ✅</p>
+        <div id="archive-content"></div>
       </div>
     </div>
 
     <div id="hall-tab" class="hidden">
       <div class="section">
         <h2>Hall of Fame 🏆</h2>
-        <p>Test — Hall of Fame funguje ✅</p>
+        <div id="hall-of-fame"></div>
+        <canvas id="hall-bar-chart" style="max-height:300px;margin-top:12px;"></canvas>
+      </div>
+      <div class="section">
+        <h2>Fun facts 🤓</h2>
+        <div id="fun-facts"></div>
       </div>
     </div>
 
     <div id="admin-tab" class="hidden">
       <div class="section">
-        <h2>Admin panel</h2>
-        <p>Test — Admin panel funguje ✅</p>
+        <h2>Admin</h2>
+        <div id="admin-panel">
+          <div id="admin-forms" class="hidden">
+            <h3>Přidat závod</h3>
+            <form id="race-form">
+              <input type="hidden" id="edit-id" />
+              <div class="form-row">
+                <label>Datum: <input type="date" id="race-date" required></label>
+                <label>Okruh: <input id="circuit-name" required></label>
+              </div>
+              <div class="form-row">
+                <label>Povolená auta: <input id="allowed-cars"></label>
+                <label>Info: <input id="additional-info"></label>
+              </div>
+              <div style="margin-top:8px">
+                <button class="btn" type="submit">Uložit závod</button>
+              </div>
+            </form>
+
+            <hr>
+
+            <h3>Zadat výsledky</h3>
+            <form id="results-form">
+              <label>Vyber závod: <select id="select-race"></select></label>
+              <div id="positions-container" class="grid-results"></div>
+              <div style="margin-top:8px">
+                <label>YouTube: <input type="url" id="youtube-url"></label>
+                <button class="btn" type="submit">Uložit výsledky</button>
+              </div>
+            </form>
+          </div>
+          <div id="not-admin" class="small">Přihlaste se jako admin (Google) pro úpravy.</div>
+        </div>
       </div>
+    </div>
+
+  </div>
+
+  <div id="driver-modal" class="modal hidden">
+    <div class="modal-content">
+      <button class="close-btn" onclick="closeDriverModal()">✕</button>
+      <h2 id="driver-name"></h2>
+      <div id="driver-summary"></div>
+      <canvas id="driver-points-chart" style="max-height:300px;margin:10px 0;"></canvas>
+      <div id="driver-race-history"></div>
     </div>
   </div>
 
-  <script src="GT7script.js" type="module"></script>
+  <script type="module" src="GT7script.js"></script>
 </body>
 </html>
