--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -26,8 +26,8 @@
       <h1>🏁 GT7 Racing Championship 2025</h1>
       <div class="small">Oficiální přehled závodů, výsledků a statistik</div>
       <div class="auth-controls">
-        <button id="btn-signin" class="btn">Přihlásit se (admin)</button>
-        <button id="btn-signout" class="btn secondary hidden">Odhlásit se</button>
+        <button id="btn-signin" class="btn" onclick="signIn()">Přihlásit se (admin)</button>
+        <button id="btn-signout" class="btn secondary hidden" onclick="signOutUser()">Odhlásit se</button>
         <span id="user-email" class="small"></span>
       </div>
     </header>
@@ -42,22 +42,8 @@
     <div id="current-tab">
       <div class="section">
         <h2>Průběžné pořadí</h2>
-        <div class="leaderboard-controls">
-          <input id="search-driver" placeholder="🔍 Hledat jezdce">
-          <label>Min. starty: <input id="min-starts" type="number" min="0" value="0"></label>
-        </div>
-        <div id="leaderboard-container"></div>
+        <div id="leaderboard-container">--- načítání ---</div>
         <canvas id="points-chart" style="margin-top:20px; max-height:400px;"></canvas>
-      </div>
-
-      <div class="section">
-        <h2>Statistiky</h2>
-        <div id="stats-container"></div>
-      </div>
-
-      <div class="section">
-        <h2>Výsledky závodů</h2>
-        <div id="past-races"></div>
       </div>
     </div>
 
@@ -74,10 +60,6 @@
         <div id="hall-of-fame"></div>
         <canvas id="hall-bar-chart" style="max-height:300px;margin-top:12px;"></canvas>
       </div>
-      <div class="section">
-        <h2>Fun facts 🤓</h2>
-        <div id="fun-facts"></div>
-      </div>
     </div>
 
     <div id="admin-tab" class="hidden">
@@ -85,49 +67,13 @@
         <h2>Admin</h2>
         <div id="admin-panel">
           <div id="admin-forms" class="hidden">
-            <h3>Přidat závod</h3>
-            <form id="race-form">
-              <input type="hidden" id="edit-id" />
-              <div class="form-row">
-                <label>Datum: <input type="date" id="race-date" required></label>
-                <label>Okruh: <input id="circuit-name" required></label>
-              </div>
-              <div class="form-row">
-                <label>Povolená auta: <input id="allowed-cars"></label>
-                <label>Info: <input id="additional-info"></label>
-              </div>
-              <div style="margin-top:8px">
-                <button class="btn" type="submit">Uložit závod</button>
-              </div>
-            </form>
-
-            <hr>
-
-            <h3>Zadat výsledky</h3>
-            <form id="results-form">
-              <label>Vyber závod: <select id="select-race"></select></label>
-              <div id="positions-container" class="grid-results"></div>
-              <div style="margin-top:8px">
-                <label>YouTube: <input type="url" id="youtube-url"></label>
-                <button class="btn" type="submit">Uložit výsledky</button>
-              </div>
-            </form>
+            <p>Admin sekce (viditelná, pokud jste přihlášen jako admin)</p>
           </div>
           <div id="not-admin" class="small">Přihlaste se jako admin (Google) pro úpravy.</div>
         </div>
       </div>
     </div>
 
-  </div>
-
-  <div id="driver-modal" class="modal hidden">
-    <div class="modal-content">
-      <button class="close-btn" onclick="closeDriverModal()">✕</button>
-      <h2 id="driver-name"></h2>
-      <div id="driver-summary"></div>
-      <canvas id="driver-points-chart" style="max-height:300px;margin:10px 0;"></canvas>
-      <div id="driver-race-history"></div>
-    </div>
   </div>
 
   <script type="module" src="GT7script.js"></script>
