--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -6,7 +6,7 @@
   <title>GT7 Racing Championship 2025</title>
   <link rel="stylesheet" href="GT7style.css" />
   <script>
-    // Jednoduché přepínání tabů
+    // showTab early so onclick handlers work
     window.showTab = function(tab, evt) {
       document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));
       if (evt && evt.target) evt.target.classList.add('active');
@@ -42,14 +42,31 @@
       <button class="tab" onclick="showTab('admin', event)">Admin</button>
     </div>
 
+    <!-- CURRENT -->
     <div id="current-tab">
       <div class="section">
         <h2>Průběžné pořadí</h2>
-        <div id="leaderboard-container">--- načítání ---</div>
+        <div class="leaderboard-controls">
+          <input id="search-driver" placeholder="🔍 Hledat jezdce">
+          <label>Min. starty: <input id="min-starts" type="number" min="0" value="0"></label>
+          <label>Sezóna: <select id="season-select"></select></label>
+        </div>
+        <div id="leaderboard-container"></div>
         <canvas id="points-chart" style="margin-top:20px; max-height:400px;"></canvas>
+      </div>
+
+      <div class="section">
+        <h2>Statistiky</h2>
+        <div id="stats-container"></div>
+      </div>
+
+      <div class="section">
+        <h2>Výsledky závodů</h2>
+        <div id="past-races"></div>
       </div>
     </div>
 
+    <!-- ARCHIVE -->
     <div id="archive-tab" class="hidden">
       <div class="section">
         <h2>Archiv sezón</h2>
@@ -57,20 +74,58 @@
       </div>
     </div>
 
+    <!-- HALL -->
     <div id="hall-tab" class="hidden">
       <div class="section">
         <h2>Hall of Fame 🏆</h2>
         <div id="hall-of-fame"></div>
         <canvas id="hall-bar-chart" style="max-height:300px;margin-top:12px;"></canvas>
       </div>
+      <div class="section">
+        <h2>Fun facts 🤓</h2>
+        <div id="fun-facts"></div>
+      </div>
     </div>
 
+    <!-- ADMIN -->
     <div id="admin-tab" class="hidden">
       <div class="section">
         <h2>Admin</h2>
         <div id="admin-panel">
           <div id="admin-forms" class="hidden">
-            <p>Admin sekce (viditelná, pokud jste přihlášen jako admin)</p>
+            <h3>Přidat / upravit závod</h3>
+            <form id="race-form">
+              <input type="hidden" id="edit-id" />
+              <div class="form-row">
+                <label>Datum: <input type="date" id="race-date" required></label>
+                <label>Okruh: <input id="circuit-name" required></label>
+              </div>
+              <div class="form-row">
+                <label>Povolená auta: <input id="allowed-cars"></label>
+                <label>Info: <input id="additional-info"></label>
+              </div>
+              <div style="margin-top:8px">
+                <button class="btn" type="submit">Uložit závod</button>
+                <button type="button" class="btn secondary" onclick="resetRaceForm()">Reset</button>
+              </div>
+            </form>
+
+            <hr>
+
+            <h3>Zadat výsledky (1.–5. místo + DNS)</h3>
+            <form id="results-form">
+              <label>Vyber závod: <select id="select-race"></select></label>
+              <div id="positions-container" class="grid-results"></div>
+              <div style="margin-top:8px">
+                <label>YouTube: <input type="url" id="youtube-url"></label>
+                <button class="btn" type="submit">Uložit výsledky</button>
+                <button type="button" class="btn secondary" onclick="resetResultsForm()">Reset</button>
+              </div>
+            </form>
+
+            <hr>
+            <h3>Seznam závodů (admin)</h3>
+            <div id="admin-race-list" class="admin-list"></div>
           </div>
           <div id="not-admin" class="small">Přihlaste se jako admin (Google) pro úpravy.</div>
         </div>
@@ -79,7 +134,18 @@
 
   </div>
 
-  <!-- ✅ Chart.js přes UMD -->
+  <!-- driver modal -->
+  <div id="driver-modal" class="modal hidden">
+    <div class="modal-content">
+      <button class="close-btn" onclick="closeDriverModal()">✕</button>
+      <h2 id="driver-name"></h2>
+      <div id="driver-summary"></div>
+      <canvas id="driver-points-chart" style="max-height:300px;margin:10px 0;"></canvas>
+      <div id="driver-race-history"></div>
+    </div>
+  </div>
+
+  <!-- Chart.js UMD -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.js"></script>
   <script type="module" src="GT7script.js"></script>
 </body>
