--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -53,6 +53,6 @@
     </section>
   </main>
 
-  <script type="module" src="GT7script.js"></script>
+  <script type="module" src="/GT7script.js"></script>
 </body>
 </html>
