--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GT7 Sezóna 2025</title>
-  <link rel="stylesheet" href="GT7style.css">
+  <link rel="stylesheet" href="./GT7style.css">
 </head>
 <body>
   <header>
