--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GT7 Racing Championship 2025</title>
+  <title>HRIC-PIC-MA-MA-TAMA GT7 Championship 2025</title>
   <link rel="stylesheet" href="./GT7style.css" />
   <script>
     // showTab early so inline onclick handlers work
@@ -19,7 +19,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>🏁 GT7 Racing Championship 2025</h1>
+      <h1>🏁 HRIC-PIC-MA-MA-TAMA GT7 Championship 2025</h1>
       <div class="small">Přehled závodů, výsledků a statistik</div>
       <div class="auth-controls">
         <button id="btn-signin" class="btn" onclick="signIn()">Přihlásit se (admin)</button>
