--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>GT7 Sezóna 2025</title>
+  <title>HRIC-PIC-MA-MA-TAMA GT7 Championship 2025</title>
   <link rel="stylesheet" href="GT7style.css" />
   <script>
     // make showTab available early for inline handlers
@@ -21,11 +21,11 @@
   <div class="container">
     <header class="site-header">
       <div>
-        <h1>🏁 GT7 Racing Championship 2025</h1>
+        <h1>🏁 HRIC-PIC-MA-MA-TAMA GT7 Championship 2025</h1>
         <div class="small">Přehled závodů, výsledků a statistik</div>
       </div>
       <div class="auth-controls">
-        <button id="btn-signin" class="btn">Přihlásit se (Google)</button>
+        <button id="btn-signin" class="btn">Přihlásit se (přes Google)</button>
         <button id="btn-signout" class="btn secondary hidden">Odhlásit se</button>
         <div id="user-email" class="small"></div>
       </div>
