--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GT7 Sezóna 2025</title>
+  <title>HRIC-PIC-MA-MA-TAMA GT7 Sezóna 2025</title>
   <link rel="stylesheet" href="GT7style.css">
   <script type="module" src="GT7script.js" defer></script>
 </head>
 <body>
   <header>
-    <h1>Gran Turismo 7 – Sezóna 2025</h1>
+    <h1>HRIC-PIC-MA-MA-TAMA GT7 Sezóna 2025</h1>
     <nav>
       <button id="showRacesBtn" class="active">Závody</button>
       <button id="showStandingsBtn">Pořadí</button>
@@ -63,7 +63,7 @@
   </main>
 
   <footer>
-    <p>© 2025 GT7 League</p>
+    <p>© 2025 VIKI for HRIC-PIC-MA-MA-TAMA GT7 Championship</p>
   </footer>
 </body>
 </html>
