--- a/GT7/GT7sezona2025.html
+++ b/GT7/GT7sezona2025.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HRIC-PIC-MA-MA-TAMA GT7 Sezóna 2025</title>
+  <title>!HRIC-PIC-MA-MA-TAMA! GT7 Sezóna 2025</title>
   <link rel="stylesheet" href="GT7style.css">
   <script type="module" src="GT7script.js" defer></script>
 </head>
